--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,10 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
 
+    // Glide
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+
+    // Rounded imageview
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 }
