Added bottom navigation view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
 
     // Rounded imageview
     compile 'de.hdodenhof:circleimageview:2.2.0'
+
+    compile 'com.android.support:design:26.1.0'
 }
