--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
 
     // Apollo RxJava support
     compile 'com.apollographql.apollo:apollo-rx2-support:0.4.2'
+
+    // Gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 }
