--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ notifications:
   email:
     recipients:
       - rudnev.vanya@gmail.com
-    on_success: never
+    on_success: change
     on_failure: always
 
 before_cache:
