--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,17 +5,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'io.fabric'
 
-ext {
-    supportVersion = '26.1.0'
-    daggerVersion = '2.12'
-}
-
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.utrobin.luna"
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,6 +22,12 @@ android {
         }
     }
     dataBinding.enabled = true
+}
+
+ext {
+    supportVersion = '27.0.2'
+    daggerVersion = '2.14.1'
+    glideVersion = '4.4.0'
 }
 
 dependencies {
@@ -43,11 +44,11 @@ dependencies {
 
     // RxJava
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.6'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
 
     // Glide
-    compile 'com.github.bumptech.glide:glide:4.3.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    compile "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     // Rounded imageview
     compile 'de.hdodenhof:circleimageview:2.2.0'
@@ -62,11 +63,11 @@ dependencies {
     compile 'ru.yandex:yandexmapkit:2.5.4@aar'
 
     // Data binding
-    kapt "com.android.databinding:compiler:3.1.0-alpha02"
+    kapt "com.android.databinding:compiler:3.1.0-alpha06"
 
     // Crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
-        transitive = true;
+        transitive = true
     }
 
     // Espresso
@@ -74,7 +75,7 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-contrib:3.0.1'
 
     // Apollo RxJava support
-    compile 'com.apollographql.apollo:apollo-rx2-support:0.4.2'
+    compile 'com.apollographql.apollo:apollo-rx2-support:0.4.3'
 
     // Gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
