--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
 
+before_install:
+  - yes | sdkmanager "platforms;android-27"
+
 cache:
   directories:
   - $HOME/.gradle/caches/
@@ -22,8 +25,8 @@ cache:
 
 env:
  global:
- - ANDROID_API=26
- - ANDROID_BUILD_TOOLS=26.0.2
+ - ANDROID_API=27
+ - ANDROID_BUILD_TOOLS=27.0.2
 
 android:
   components:
