--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
     // Rounded imageview
     implementation 'de.hdodenhof:circleimageview:2.2.0'
@@ -79,4 +79,7 @@ dependencies {
 
     // Gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+
+    // Android SVG
+    implementation 'com.caverock:androidsvg:1.2.1'
 }
