--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,12 @@ before_cache:
 before_install:
   - yes | sdkmanager "platforms;android-27"
 
+before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 cache:
   directories:
   - $HOME/.gradle/caches/
@@ -35,7 +41,9 @@ android:
   - platform-tools
   - android-${ANDROID_API}
   - build-tools-${ANDROID_BUILD_TOOLS}
+  - android-22
+  - sys-img-armeabi-v7a-android-22
   - extra
 
 script:
-- ./gradlew clean test build
+- ./gradlew build connectedCheck
