--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ ext {
     espressoVersion = '3.0.1'
     daggerVersion = '2.14.1'
     glideVersion = '4.4.0'
+    leakCanaryVersion = '1.5.4'
 }
 
 dependencies {
@@ -81,4 +82,8 @@ dependencies {
 
     // Android SVG
     implementation 'com.caverock:androidsvg:1.2.1'
+
+    // LeakCanary
+    debugCompile "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
 }
