--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,6 @@ before_cache:
 before_install:
   - yes | sdkmanager "platforms;android-27"
 
-before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
-
 cache:
   directories:
   - $HOME/.gradle/caches/
@@ -35,15 +29,20 @@ env:
  - ANDROID_BUILD_TOOLS=27.0.2
 
 android:
+  licenses:
+    - android-sdk-preview-license-.+,,
+    - android-sdk-license-.+,,
+    - google-gdk-license-.+
   components:
-  - tools
-  - tools # Running this twice get's the latest build tools
-  - platform-tools
-  - android-${ANDROID_API}
-  - build-tools-${ANDROID_BUILD_TOOLS}
-  - android-22
-  - sys-img-armeabi-v7a-android-22
-  - extra
+    - tools
+    - tools # Running this twice get's the latest build tools
+    - platform-tools
+    - android-${ANDROID_API}
+    - build-tools-${ANDROID_BUILD_TOOLS}
+    - extra-android-m2repository,
+    - extra-google-m2repository,
+    - extra-android-support,
+    - extra-google-google_play_services
 
 script:
-- ./gradlew build connectedCheck
+  - ./gradlew test
