--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,11 @@ before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
 
-before_install:
-  - yes | sdkmanager "platforms;android-27"
+before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 cache:
   directories:
@@ -29,20 +32,15 @@ env:
  - ANDROID_BUILD_TOOLS=27.0.2
 
 android:
-  licenses:
-    - android-sdk-preview-license-.+,,
-    - android-sdk-license-.+,,
-    - google-gdk-license-.+
-  components:
-    - tools
-    - tools # Running this twice get's the latest build tools
-    - platform-tools
-    - android-${ANDROID_API}
-    - build-tools-${ANDROID_BUILD_TOOLS}
-    - extra-android-m2repository,
-    - extra-google-m2repository,
-    - extra-android-support,
-    - extra-google-google_play_services
+ components:
+  - tools
+  - tools # Running this twice get's the latest build tools
+  - platform-tools
+  - android-${ANDROID_API}
+  - build-tools-${ANDROID_BUILD_TOOLS}
+  - android-22
+  - sys-img-armeabi-v7a-android-22
+  - extra
 
 script:
-  - ./gradlew test
+   - ./gradlew build connectedCheck
