--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
+    buildToolsVersion "27.0.2"
     defaultConfig {
         applicationId "com.utrobin.luna"
         minSdkVersion 17
@@ -22,6 +23,9 @@ android {
         }
     }
     dataBinding.enabled = true
+    lintOptions {
+        abortOnError false
+    }
 }
 
 ext {
@@ -34,7 +38,7 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$supportVersion"
     implementation "com.android.support:design:$supportVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
