--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
 
+before_install:
+- yes | sdkmanager "platforms;android-27"
+
 before_script:
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
