--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 ext {
-    supportVersion = '27.1.0'
+    supportVersion = '27.1.1'
     espressoVersion = '3.0.1'
     daggerVersion = '2.14.1'
     glideVersion = '4.4.0'
@@ -38,13 +38,13 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$supportVersion"
     implementation "com.android.support:design:$supportVersion"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espressoVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
@@ -68,7 +68,7 @@ dependencies {
     implementation 'ru.yandex:yandexmapkit:2.5.4@aar'
 
     // Data binding
-    kapt "com.android.databinding:compiler:3.2.0-alpha02"
+    kapt "com.android.databinding:compiler:3.2.0-alpha10"
 
     // Crashlytics
     implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
@@ -76,7 +76,7 @@ dependencies {
     }
 
     // Apollo RxJava support
-    implementation 'com.apollographql.apollo:apollo-rx2-support:0.4.3'
+    implementation 'com.apollographql.apollo:apollo-rx2-support:0.4.4'
 
     // Gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
