--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,9 @@ android {
 
 ext {
     supportVersion = '27.1.1'
-    espressoVersion = '3.0.1'
-    daggerVersion = '2.14.1'
-    glideVersion = '4.4.0'
+    espressoVersion = '3.0.2-beta1'
+    daggerVersion = '2.16'
+    glideVersion = '4.7.1'
     leakCanaryVersion = '1.5.4'
 }
 
