Using @Parcelize annotation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,3 +84,7 @@ dependencies {
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
 }
+
+androidExtensions {
+    experimental = true
+}
