--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
 ext {
     supportVersion = '27.1.1'
+    apolloVersion = '1.0.0-alpha'
     espressoVersion = '3.0.2-beta1'
     daggerVersion = '2.16'
     glideVersion = '4.7.1'
@@ -40,7 +41,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$supportVersion"
     implementation "com.android.support:design:$supportVersion"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -72,7 +73,7 @@ dependencies {
     }
 
     // Apollo RxJava support
-    implementation 'com.apollographql.apollo:apollo-rx2-support:0.4.4'
+    implementation "com.apollographql.apollo:apollo-rx2-support:$apolloVersion"
 
     // Gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
