--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
 ext {
     supportVersion = '27.1.1'
+    coroutinesVersion = '0.23.4'
     apolloVersion = '1.0.0-alpha'
     espressoVersion = '3.0.2-beta1'
     daggerVersion = '2.16'
@@ -52,6 +53,10 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$supportVersion"
     implementation "com.android.support:cardview-v7:$supportVersion"
 
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+
     // RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
@@ -72,8 +77,9 @@ dependencies {
         transitive = true
     }
 
-    // Apollo RxJava support
-    implementation "com.apollographql.apollo:apollo-rx2-support:$apolloVersion"
+    // Apollo GraphQL
+    implementation "com.apollographql.apollo:apollo-runtime:$apolloVersion"
+    implementation "com.apollographql.apollo:apollo-android-support:$apolloVersion"
 
     // Gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
@@ -88,4 +94,10 @@ dependencies {
 
 androidExtensions {
     experimental = true
+}
+
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
 }
