Added salon activity with network request

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".ui.view.MainActivity"
             android:screenOrientation="portrait">
@@ -20,6 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.view.SalonActivity"
+            android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.view.MasterActivity"
             android:screenOrientation="portrait" />
