--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "com.utrobin.luna"
         minSdkVersion 17
@@ -30,7 +30,7 @@ android {
 
 ext {
     supportVersion = '27.1.1'
-    coroutinesVersion = '0.23.4'
+    coroutinesVersion = '0.25.0'
     apolloVersion = '1.0.0-alpha'
     espressoVersion = '3.0.2-beta1'
     daggerVersion = '2.16'
